# kursss

./: .env.example  .flake8  README.md  logging_config.py  main.py  pyproject.toml  reports.json  settings.py  user_settings.json
data/: my_operations.xls
src/: decorators.py  external_api.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_external_api.py  test_reports.py  test_services.py  test_utils.py  test_views.py
