[tool.poetry]
name = "transaction_analysis"
version = "0.1.0"
description = "Проект для анализа транзакций"
authors = ["Дана Плотникова"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
requests = "^2.26.0"
flake8 = "^3.9.2"
black = "^21.9b0"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2.5"
python-dotenv = "^0.19.2"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv/'
